[package]
name = "hedel-rs"
version = "0.1.1"
edition = "2021"
authors = [
	"Tommaso Sana <tommasosana@crah.app>"
]
repository = "https://github.com/crahteam/hedel-rs"
documentation = "https://docs.rs/hedel_rs/"
license = "GPL-3.0"
keywords = ["linked", "list", "dom", "tree"]
categories = ["data-structures"]
readme = "./README.md"
description = "A Hierarchical Doubly Linked List."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
